--- a/scss/components/_reference.scss
+++ b/scss/components/_reference.scss
@@ -1,7 +1,6 @@
+.reference {
 
-.reference div {
-
-   > div {
+   .quote {
       display: flex;
       flex-direction: column;
 
