--- a/scss/components/_slider.scss
+++ b/scss/components/_slider.scss
@@ -104,8 +104,8 @@
 
 
 // Remove scroll bar
-// .slider * {
-//    &::-webkit-scrollbar {
-//       display: none;
-//    }
-// }
+.slider * {
+   &::-webkit-scrollbar {
+      display: none;
+   }
+}
