--- a/scss/styles/_typography.scss
+++ b/scss/styles/_typography.scss
@@ -17,15 +17,13 @@ body {
 // paragraph
 p {
    @include text(1rem, 160%, 400);
-   // font-size: calc(1rem + .15vw);
-   font-size: calc(0.75rem + 0.8vmin);
+   font-size: calc(0.7rem + 0.85vmin);
    margin-bottom: 1rem;
 }
 
 .p1,
 .p1 p {
-   @include text(1.25rem, 160%, 400);
-   // font-size: calc(1.25rem + .25vw);
+   @include text(1.2rem, 160%, 400);
    font-size: calc(.95rem + 0.8vmin);
 }
 
@@ -33,13 +31,33 @@ p {
 // heading
 h1,
 .h1 {
-   @include text(7rem, 110%, 700);
+   @include text(7rem, 140%, 700);
    font-size: calc(2rem + 6vw);
-   letter-spacing: -0.02em;
+   letter-spacing: -0.03em;
+   margin-bottom: 3rem;
+
+   @include breakpoint(md) {
+      margin-bottom: 3rem;
+   }
+
+   @include breakpoint(lg) {
+      margin-bottom: 4rem;
+   }
+
+   @include breakpoint(xl) {
+      margin-bottom: 5rem;
+   }
+}
+
+h2,
+.h2 {
+   @include text(5rem, 140%, 700);
+   font-size: calc(1.5rem + 4.5vw);
+   letter-spacing: -0.03em;
    margin-bottom: 2rem;
 
    @include breakpoint(md) {
-      margin-bottom: 2.5rem;
+      margin-bottom: 2rem;
    }
 
    @include breakpoint(lg) {
@@ -48,26 +66,6 @@ h1,
 
    @include breakpoint(xl) {
       margin-bottom: 4rem;
-   }
-}
-
-h2,
-.h2 {
-   @include text(5rem, 110%, 700);
-   font-size: calc(1.5rem + 4.5vw);
-   letter-spacing: -0.01em;
-   margin-bottom: 1.5rem;
-
-   @include breakpoint(md) {
-      margin-bottom: 2rem;
-   }
-
-   @include breakpoint(lg) {
-      margin-bottom: 2.5rem;
-   }
-
-   @include breakpoint(xl) {
-      margin-bottom: 3rem;
    }
 }
 
@@ -115,7 +113,7 @@ a {
       width: 100%;
       height: .2rem;
       border-radius: 4px;
-      background: var(--color-front);
+      background: var(--color-front2);
       top: 100%;
       left: 0;
       pointer-events: none;
